[package]
name = "tsudoku"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["cargo"] }
ncurses = "5.101.0"

[build-dependencies]
bindgen = "0.69.2"
regex = "1.10.2"
