[package]
name = "tsudoku"
# TODO: Add install of necessary packages to a shell script
# TODO: Remove all source code except for the shell script from main branch
version = "2.1.2"
edition = "2021"
authors = ["Chris Swindell <crates.io.plausibly761@passmail.net>"]
description = "A terminal-friendly version of sudoku"
readme = "README.md"
repository = "https://github.com/TheOGChips/tsudoku"
license = "GPL-3.0-or-later"
keywords = ["sudoku", "TUI", "games", "puzzle"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO: Update the README (on main and rust-port branches)
[dependencies]
clap = { version = "4.4.4", features = ["cargo"] }
itertools = "0.13.0"
once_cell = "1.19.0"
pancurses = "0.17.0"
queues = "1.1.0"
rand = "0.8.5"
signal-hook = "0.3.17"
strum = { version = "0.26.1", features = ["derive"] }
